--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,9 @@ hr.q-divider{
     margin: 0 auto;
 }
 
-/*TASK 1*/
+/*--------------------------------------------------
+TASK #1
+--------------------------------------------------*/
 
 .nav-menu {
   visibility: visible;
@@ -117,7 +119,9 @@ hr.q-divider{
   width: 20%;
 }
 
-/*TASK 2*/
+/*--------------------------------------------------
+TASK #2
+--------------------------------------------------*/
 
 #add-guest .answer-box {
   text-align: center;
@@ -146,7 +150,9 @@ hr.q-divider{
   background: tomato;
 }
 
-/*TASK 3*/
+/*--------------------------------------------------
+TASK #3
+--------------------------------------------------*/
 
 #add-guest-bonus .answer-box {
   text-align: center;
